[build-system]

requires = [
    "poetry-core >=2.0.0,<3.0.0",
]

build-backend = "poetry.core.masonry.api"


[project]

name = "bwyd"

dynamic = [
    "classifiers",
    "version",
]

description = "The seed crazy idea here is to consider how human cooks behave like robots, following recipes as instructions."
license = { text = "MIT" }

readme = "README.md"

authors = [
    { name = "derwen.ai", email = "info@derwen.ai" }
]

maintainers = [
    { name = "Paco Nathan", email = "paco@derwen.ai" }
]

requires-python = ">=3.11"

dependencies = [
    "textx (>=4.1.0,<5.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "pydantic-graph (>=0.0.36,<0.0.37)",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "spdx-tools (>=0.8.3,<0.9.0)",
    "spdx-license-list (>=3.26.0,<4.0.0)",
    "minify-html (>=0.16.4,<0.17.0)",
    "universal-pathlib (>=0.2.6,<0.3.0)"
]

keywords = [
    "cooking",
    "dsl",
    "knowledge-graph",
    "nlp",
    "publishing",
    "recipes",
    "validation",
]


[tool.poetry]

version = "0.0.2"

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]


[project.urls]

repository = "https://github.com/DerwenAI/bwyd"


[project.optional-dependencies]

demo = [
    "jupyterlab (>=4.3.5,<5.0.0)",
    "jupyterlab-execute-time (>=3.2.0,<4.0.0)",
    "ipympl (>=0.9.6,<0.10.0)",
    "watermark (>=2.5.0,<3.0.0)",
]

test = [
    "pytest >= 7.4",
    "deepdiff >= 8.3.0",
]

dev = [
    "mypy (>=1.15.0,<2.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
]
