[project]

name = "bwyd"

dynamic = [
    "classifiers",
    "version",
]

description = "The seed crazy idea here is to consider how human cooks behave like robots, following recipes as instructions."
license = { text = "MIT" }

readme = "README.md"
version = "0.2.2"

authors = [
    { name = "derwen.ai", email = "info@derwen.ai" }
]

maintainers = [
    { name = "Paco Nathan", email = "paco@derwen.ai" }
]

requires-python = ">=3.11,<4.0.0"

dependencies = [
    # DSL parser
    "universal-pathlib (>=0.2.6,<0.3.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "textx (>=4.1.0,<5.0.0)",

    # graph
    "rdflib (>=7.1.4,<8.0.0)",
    "pydantic-graph (>=0.0.36,<0.0.37)",

    # HTML rendering
    "jinja2 (>=3.1.6,<4.0.0)",
    "spdx-tools (>=0.8.3,<0.9.0)",
    "spdx-license-list (>=3.26.0,<4.0.0)",
    "minify-html (>=0.16.4,<0.17.0)",
    "inflect (>=7.5.0,<8.0.0)",
    "pillow (>=11.2.1,<12.0.0)",

    # instrumentation, observability
    "icecream (>=2.1.4,<3.0.0)",
    "pyinstrument (>=5.0.2,<6.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
]

keywords = [
    "cooking",
    "dsl",
    "knowledge graph",
    "nlp",
    "publishing",
    "recipes",
    "validation",
]


classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]


[project.urls]

repository = "https://github.com/DerwenAI/bwyd"


[tool.pytest.ini_options]

filterwarnings = [
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:Jupyter is migrating:DeprecationWarning',
    'ignore:Parsing dates involving:DeprecationWarning',
]


[tool.poetry.group.test.dependencies]

deepdiff = "^8.4.2"
mypy = "^1.15.0"
pylint = "^3.3.6"
pytest = "^8.3.5"
types-python-dateutil = "^2.9.0.20260124"
types-requests = "^2.32.0.20250328"


[tool.poetry.group.demo.dependencies]

ipympl = "^0.9.7"
jupyterlab = "^4.4.1"
jupyterlab-execute-time = "^3.2.0"
polars = "^1.30.0"
pyarrow = "^20.0.0"
sentence-transformers = "^4.1.0"
watermark = "^2.5.0"


[build-system]

requires = [
    "poetry-core >=2.0.0,<3.0.0",
]

build-backend = "poetry.core.masonry.api"
